--- a/projet/package.json
+++ b/projet/package.json
@@ -21,6 +21,7 @@
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
     "expo-image-picker": "~7.0.0",
+    "expo-permissions": "~7.0.0",
     "expo-web-browser": "^7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
