--- a/projet/package.json
+++ b/projet/package.json
@@ -28,9 +28,11 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-animated-loader": "^0.0.8",
     "react-native-cli": "^2.0.1",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-swipe-cards": "^0.1.1",
     "react-native-web": "^0.11.7",
